# hai

./: .gitignore  AGENTS.md  Cargo.toml  README.md  hai.toml.example
.sqlx/: query-0a1a2a80f1ec44d75bb72c9a2959088f406787c0bdf2ab149fac3975f5ed1567.json  query-0cd193a95095fa84474ab015317678bba73f998918277e7c63ceb4af29dbb4f8.json  query-0e5351611e7d6ed891d6bb51568f3762fdff7004331d56c32217e9223ace8709.json  query-0f8489122733d9dfc5fba8a63ede16691da3637ec21cfa80fbaf44c743381376.json  query-0fb54bbee30db9e45161180419a7afc3c4e5923e5360370666262626e78b6165.json  query-10b45deee47666ef05d91e13aaf2fe5bf80b5dac96adbd1fae8c564687b2e65e.json  query-17996c9e926572015fc8b46d411ea3b460db69cbf5c7075ecab5da29cf179c38.json  query-1eeb8d5ed51517ec6da1799992f35329e66b29c21363efa80ce82f2cad559325.json  query-211fd1923a3c053ff8a23360fa3db4304085803df2c9500956b5b1a1e16cedbd.json  query-2507483ed9b64b982ad6d3b69bd15298adf9f3040e47094bc3fee8060a158270.json  (+63 more)
crates/hai/: Cargo.toml
crates/hai/src/: cli.rs  coordinator.rs  error.rs  lib.rs  main.rs
crates/hai/src/agent/: attachment.rs  handler.rs  mod.rs  node.rs  openrouter.rs  personality.rs  prompts.rs
crates/hai/src/agent/components/: context.rs  mod.rs
crates/hai/src/agent/components/sections/: account.rs  chat.rs  context.rs  memory.rs  message.rs  mod.rs  topic.rs
crates/hai/src/agent/context/: factory.rs  mod.rs  render_context.rs
crates/hai/src/agent/context/sections/: account.rs  chat.rs  context.rs  memory.rs  message.rs  mod.rs  topic.rs
crates/hai/src/agent/core/: mod.rs  personality.rs  prompts.rs  provider.rs  rawclient.rs
crates/hai/src/agent/core/multimodal/: audio.rs  embedding.rs  image.rs  mod.rs
crates/hai/src/agent/core/render/: content.rs  elements.rs  mod.rs
crates/hai/src/agent/core/render/renderer/: json.rs  md.rs  mod.rs  xml.rs
crates/hai/src/agent/core/skills/: manager.rs  mod.rs  parser.rs  tool.rs
crates/hai/src/agent/event/: cause.rs  group.rs  mod.rs
crates/hai/src/agent/handler/: debounce.rs  mod.rs  session.rs  task.rs
crates/hai/src/agent/multimodal/: audio.rs  embedding.rs  image.rs  mod.rs
crates/hai/src/agent/node/: hai_agent.rs  main_agent.rs  mcp_agent.rs  mod.rs
crates/hai/src/agent/render/: content.rs  core.rs  mod.rs
crates/hai/src/agent/tools/: account.rs  agent.rs  calculator.rs  memory.rs  message.rs  mod.rs  multimodal.rs  scratchpad.rs  skills.rs  topic.rs  util.rs  voice.rs
crates/hai/src/agentcore/: mod.rs  provider.rs  rawclient.rs  token.rs
crates/hai/src/agentcore/multimodal/: mod.rs  model.rs  tts.rs
crates/hai/src/agentcore/render/: elements.rs  mod.rs
crates/hai/src/agentcore/render/renderer/: json.rs  md.rs  mod.rs  xml.rs
crates/hai/src/agentcore/skills/: manager.rs  mod.rs  parser.rs
crates/hai/src/app/: context.rs  db.rs  mod.rs
crates/hai/src/app/domain/entity/: account.rs  memory.rs  message.rs  mod.rs  topic.rs
crates/hai/src/app/domain/model/: content.rs  memory.rs  meta.rs  mod.rs
crates/hai/src/app/repo/: account.rs  chat.rs  identity.rs  memory.rs  message.rs  mod.rs  topic.rs
crates/hai/src/app/service/: context.rs  identity.rs  memory.rs  message.rs  mod.rs  platform.rs  topic.rs
crates/hai/src/bot/telegram/: bot.rs  identity.rs  mod.rs  service.rs  signalhandler.rs  util.rs
crates/hai/src/config/: env.rs  manager.rs  meta.rs  mod.rs  paths.rs  provider_manager.rs  schema.rs
crates/hai/src/domain/: db.rs  mod.rs
crates/hai/src/domain/entity/: account.rs  chat.rs  identity.rs  memory.rs  message.rs  mod.rs  perception.rs  scratchpad.rs  topic.rs
crates/hai/src/domain/repo/: account.rs  chat.rs  identity.rs  memory.rs  message.rs  mod.rs  perception.rs  scratchpad.rs  topic.rs
crates/hai/src/domain/service/: context.rs  identity.rs  memory.rs  message.rs  mod.rs  perception.rs  platform.rs  scratchpad.rs  topic.rs
crates/hai/src/domain/vo/: content.rs  image.rs  memory.rs  meta.rs  mod.rs  resource.rs
crates/hai/src/infra/cache/: mod.rs
crates/hai/src/infra/platform/telegram/: bot.rs  id.rs  mod.rs  sender.rs
crates/hai/src/platform/telegram/: bot.rs  mod.rs  sender.rs
crates/hai/src/trigger/: core.rs  event.rs  mod.rs
crates/hai/src/util/: path.rs  token.rs
(+7 files in other folders)
