[workspace]
members = ["crates/*"]
resolver = "3"

[workspace.dependencies]
tokio = { version = "1", features = ["full"] }
anyhow = "1"
config = { version = "0.15", features = ["json", "toml"] }
dotenvy = "0.15"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_with = "3"
serde_yml = "0.0.12"
autoagents = { version = "0.3", features = [
    "openrouter",
    "openai",
    "anthropic",
    "google",
    "deepseek",
    "groq",
    "ollama",
    "xai",
] }
autoagents-derive = "0.3"
autoagents-toolkit = { version = "0.3", features = ["mcp"] }
teloxide = { version = "0.17", features = ["macros"] }
tracing = "0.1"
tracing-serde = "0.2"
tracing-subscriber = "0.3"
async-trait = "0.1"
base64 = "0.22"
reqwest = "0.12"
mime = "0.3"
arc-swap = "1.7"
derive_more = { version = "2", features = ["full"] }
tap = "1"
jiff = { version = "0.2", features = ["serde"] }
sqlx = { version = "0.8", features = [
    "runtime-tokio",
    "postgres",
    "uuid",
    "json",
] }
jiff-sqlx = { version = "0.1", features = ["postgres"] }
pgvector = { version = "0.4", features = ["sqlx"] }
uuid = { version = "1", features = ["v4", "serde"] }
strum = { version = "0.28", features = ["derive"] }
struct-patch = "0.10.4"
tiktoken-rs = "0.9.1"
toml = "1.0.4"
clap = { version = "4.5", features = ["derive"] }
thiserror = "2.0.18"
rand = { version = "0.10" }
xmlformat = "1.2"
indexmap = { version = "2", features = ["serde"] }
futures = "0.3"
dirs = "6.0.0"
